--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -1,19 +1,33 @@
+.mobileLinks, .menuButton {
+    display: none;
+ }
+ 
+
 @media (max-width: 768px) {
     .links {
         display: none;
     }
-}
-.mobileLinks {
-    position: absolute;
-    top: 100px;
-    right: 0;
-    width: 50%;
-    height: calc(100vh-100px);
-    background-color: blueviolet;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    overflow: hidden;
+
+    .menuButton {
+        display: block;
+        cursor: pointer;
+    }
+    
+    .mobileLinks {
+        position: absolute;
+        top: 100px;
+        right: 0;
+        width: 50%;
+        /*height: calc(100vh-100px);*/  
+        height: 84vh;
+        background-color: blueviolet;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        overflow: hidden;
+    }
+
+   
 }
