git commit -m "added styles"

--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -37,3 +37,9 @@
     border-radius: 5px;
     background-color: var(--btn);
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+}
