--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -18,6 +18,12 @@ body {
     background-color: var(--bg);
     color: var(--text);
     margin: 0rem 10rem;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
 }
 
 a {
