--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -20,7 +20,7 @@
         width: 50%;
         /*height: calc(100vh-100px);*/  
         height: 84vh;
-        background-color: blueviolet;
+        background-color: var(--bg);
         display: flex;
         flex-direction: column;
         align-items: center;
